@@ -276,6 +276,7 @@ class InsertFromSubQueryAnalyzer {
                                                             List<Assignment> assignments) {
         ExpressionAnalyzer expressionAnalyzer = new ExpressionAnalyzer(
             functions, transactionContext, parameterContext, fieldProvider, null);
+        expressionAnalyzer.setResolveFieldsOperation(Operation.UPDATE);
 
         return getUpdateAssignments(
             functions, tableRelation, targetColumns, expressionAnalyzer, transactionContext, parameterContext, assignments);
