@@ -21,6 +21,9 @@ Changes
 Fixes
 =====
 
+- Enforce validation of column constraints for ``INSERT`` statements with a
+  subquery as source and in combination with ``ON DUPLICATE KEY UPDATE``.
+
 - Fixed an issue that caused an error to be thrown when using ``GROUP BY`` or
   ``DISTINCT`` on a column of type ``IP`` in case there are rows with null
   value for that column.
